<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/app_logo"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:hint="@string/username"
            />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:hint="@string/password"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/login"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:text="@string/signup" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>