<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".Activity.Signup">
    <include layout="@layout/toolbar_layout"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/signup_icon"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:paddingVertical="5dp"
            android:fontFamily="@font/baloo2medium"
            android:layout_marginVertical="10dp"
            android:id="@+id/first_name"
            android:background="@drawable/card_corner_input"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/last_name"
            android:paddingVertical="5dp"
            android:fontFamily="@font/baloo2medium"
            android:layout_marginVertical="10dp"
            android:background="@drawable/card_corner_input"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/enter_phone_number"
            android:paddingVertical="5dp"
            android:fontFamily="@font/baloo2medium"
            android:layout_marginVertical="10dp"
            android:background="@drawable/card_corner_input"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:textCursorDrawable="@null"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_email_id"
            android:paddingVertical="5dp"
            android:fontFamily="@font/baloo2medium"
            android:layout_marginVertical="10dp"
            android:background="@drawable/card_corner_input"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:textCursorDrawable="@null"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:visibility="gone"
            android:backgroundTint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/signup"
            android:fontFamily="@font/baloo2semibold"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"
            android:textSize="23sp"
            android:padding="5dp"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/login"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
