<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".Activity.LoginPhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/app_logo"
            />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/card_corner_input"
                android:gravity="center">
        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="false"
            android:id="@+id/login_countrycode"
         />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_no"
            android:inputType="phone"
            android:paddingVertical="5dp"
            android:fontFamily="@font/baloo2medium"
            android:layout_marginVertical="10dp"
            android:id="@+id/login_mobile_number"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:maxLength="11"
            android:textSize="18sp"
            />
            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/get_otp"
            android:fontFamily="@font/baloo2semibold"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"
            android:textSize="23sp"
            android:padding="5dp"
            android:id="@+id/send_otp_btn"/>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary_blue"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/login_progress_bar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/login_image"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:fontFamily="@font/baloo2semibold"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/create_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textAlignment="center"
                android:fontFamily="@font/baloo2medium"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/corner_radius"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>